tests/NormalTests/paczka2/big_fuzzy/90796965.err
Error in line 13: A893 A893 30,0
Error in line 16: Xiwq S95 92,2
Error in line 30: A893 S372 76,1
Error in line 35: VG09icutsl S426 65,4
Error in line 37: GktvunE S426 74,8
Error in line 41: GktvunE S95 94,4
Error in line 52: 0uTC4 S95 56,2
Error in line 56: 0uTC4 S372 0,2
Error in line 71: GXiwq
Error in line 58: Xiwq S372 6,6
Error in line 74: 0uTC4 A]93 17],5
Error in line 70: xEtX6PlB9Q A893 26,2
Error in line 83: 0uTC4 A893 68,8
Error in line 96: Xiwq A893 54,9
Error in line 108: A893 A893 66,2
Error in line 113: A893 S372 34,9
Error in line 116: GktvunE S95 50,1
Error in line 103: Xiwq A893 58,0
Error in line 136: 0uTC4 S95 48,6
Error in line 161: xEtX6PlB9Q S95 13,8
Error in line 157: A893 A893 41,4
Error in line 162: xEtX6PlB9Q S372 75,8
Error in line 167: xEtX6PlB9Q A893 88,3
Error in line 164: 0uTC4 A893 128,9
Error in line 155: Xiwq S372 82,4
Error in line 173: Xiwq A893 61,6
Error in line 172: 0uTC4 S95 82,3
Error in line 202: VG09icutsl S426 54,6
Error in line 220: A893 S426 9,8
Error in line 225: xEtX6PlB9Q S372 4,7
Error in line 223: A893 S372 10,2
Error in line 228: VG09icutsl S95 0,7
Error in line 234: A893 A893 8,1
Error in line 245: TFaYuB62 S95 87,7
